[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Levels/Autoshooter/sfx/click.ogg" type="AudioStream" id=2]
[ext_resource path="res://Levels/Autoshooter/sfx/hover.ogg" type="AudioStream" id=3]
[ext_resource path="res://Levels/Autoshooter/sfx/menu.ogg" type="AudioStream" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_left = 312.0
margin_top = 128.0
margin_right = 512.0
margin_bottom = 168.0
rect_min_size = Vector2( 200, 40 )
rect_scale = Vector2( 2, 2 )
text = "Yet Another Auto Shooter"
align = 1
valign = 1

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -6.0

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0
autoplay = true
bus = "Music"

[node name="Play" type="Button" parent="."]
margin_left = 448.0
margin_top = 356.0
margin_right = 576.0
margin_bottom = 376.0
rect_min_size = Vector2( 128, 20 )
text = "Play"

[node name="Music" type="HSlider" parent="."]
margin_left = 384.0
margin_top = 504.0
margin_right = 640.0
margin_bottom = 528.0
rect_min_size = Vector2( 256, 24 )
min_value = -30.0
max_value = 0.0

[node name="MusicLabel" type="Label" parent="Music"]
margin_top = -12.0
margin_right = 40.0
margin_bottom = 2.0
rect_min_size = Vector2( 256, 16 )
text = "Music Volume"
align = 1

[node name="MasterVol" type="HSlider" parent="."]
margin_left = 384.0
margin_top = 552.0
margin_right = 640.0
margin_bottom = 576.0
rect_min_size = Vector2( 256, 24 )
min_value = -30.0
max_value = 0.0

[node name="MasterLabel" type="Label" parent="MasterVol"]
margin_top = -12.0
margin_right = 40.0
margin_bottom = 2.0
rect_min_size = Vector2( 256, 16 )
text = "Master Volume"
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 412.0
margin_top = 40.0
margin_right = 612.0
margin_bottom = 60.0
text = " Placeholder Art"
align = 1
valign = 1

[connection signal="mouse_entered" from="Play" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="value_changed" from="Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="MasterVol" to="." method="_on_MasterVol_value_changed"]
